<!--
  ~ Copyright (c) 2020, Zaphod Consulting BV, Christine Karman
  ~ This project is free software: you can redistribute it and/or modify it under the terms of
  ~ the Apache License, Version 2.0. You can find a copy of the license at
  ~ http://www.apache.org/licenses/LICENSE-2.0.
  -->

<resources>
    <string name="app_name">Christine\'s bluetooth test app</string>
    <string name="settings_title">Settings</string>
    <string name="tracing_title">Trace</string>
    <string name="event">Send event</string>
    <string name="sick">Send sick</string>
    <string name="local_service_label">Christine\'s bluetooth LE test service</string>
    <string name="local_service_started">service started</string>
    <string name="local_service_stopped">service</string>
    <string name="no_bluetooth">Device doesn\'t support bluetooth</string>
    <string name="channel_name">notf_channel</string>
    <string name="channel_description">Default notf channel</string>
    <string name="clear">Clear list</string>
    <string name="clear_contacts">Clear contacts</string>
    <string name="contacts">Contacts</string>
    <string name="new_id">New ID</string>
    <string name="help_title">Help</string>
    <string name="help1_title">ID</string>
    <string name="help1">The number above the buttons is the device id, generated by this app</string>
    <string name="help2_title">Clear list</string>
    <string name="help2">Clear the list of contacts in your screen</string>
    <string name="help3_title">New ID</string>
    <string name="help3">Creates a new ID for broadcasting</string>
    <string name="help4_title">Time window</string>
    <string name="help4">The time window that the collects contact detections. After that time, the app will create a new entry in the database for that ID.</string>
    <string name="help5_title">Discovering</string>
    <string name="help5">Your phone will scan for bluetooth LE devices.</string>
    <string name="help6_title">Peripheral</string>
    <string name="help6">makes your phone advertise its id via Bluettooth LE.</string>
    <string name="help7_title">NewID</string>
    <string name="help7">Generates a new ID, so for a scanning phone it is a new device.</string>
    <string name="help8_title">Advertising mode</string>
    <string name="help8">Sets the advertising policy: low power, balanced or low latency</string>
    <string name="help9_title">Signal strength</string>
    <string name="help9">Sets the signal strength for broadcasting on Bluetooth.</string>
    <string name="help10_title">Contacts</string>
    <string name="help10">List of contacts your app has picked up.</string>
    <string name="help11_title">Clear contacts</string>
    <string name="help11">Clears the database</string>
    <string name="help12_title">Contact columns</string>
    <string name="help12">ID, date, time, number of detections, power set by sender, power received. Power is a mostly negative number as it is measured in dB.</string>
    <string name="advertising_mode">Advertising mode</string>
    <string name="signal_strength">Signal strength</string>
    <string name="timewindow">Time window for detection</string>
    <string name="id">ID:</string>
    <string name="number_of_contacts">Minimum nr of detects</string>
    <string name="cutoff_signal_strength">Minimum signal strength</string>
    <string name="day">day</string>
    <string name="time">time</string>
    <string name="power">pwr</string>
    <string name="number">nr</string>
    <string name="sig">sig</string>
    <string name="intro">This app can send bluetooth low energy signals (\"advertise\") and detect BT LE signals (\"scan\").\n
        In the main screen, you can set advertising and scanning on or off\n
        You can also give your device a new advertising id, so hits show up as a different contact on scanning devices (\"new ID\").\n
    You can adjust the advertise mode and signal strength for sending signals.\n\n
    Signals that exceed a threshold strength and occure more than n times, will be marked in the Contacts screen. Red id means both number of hits and signal strength appy, blue means only one does.\n
    You can adjust these values in the main screen.\n\n
        In the main screen, newly detected devices show up on a list. In the Contacts page, you see the contacts accumulated.
    </string>
    <string name="scanning">Scan</string>
    <string name="advertise">Advertise</string>

</resources>
