<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2020, Zaphod Consulting BV, Christine Karman
  ~ This project is free software: you can redistribute it and/or modify it under the terms of
  ~ the Apache License, Version 2.0. You can find a copy of the license at
  ~ http://www.apache.org/licenses/LICENSE-2.0.
  -->

<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".fragment.TraceFragment"
        android:padding="20dp">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/contacts"
                style="@style/title"
                />

        <Button
                android:id="@+id/clearcontacts"
                style="@style/buttonstyle"
                android:layout_weight="0"
                android:text="@string/clear_contacts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginEnd="6dp"
                android:layout_marginTop="6dp"
                >

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="@style/text"
                    android:layout_weight="1"
                    android:text="@string/number_of_contacts"/>

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="@style/text"
                    android:layout_weight="1"
                    android:text="@string/cutoff_signal_strength"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginEnd="6dp"
                android:layout_marginBottom="6dp"
                >

            <Spinner
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="@style/spinnerstyle"
                    android:id="@+id/numberofcontacts_spinner"
                    android:layout_weight="1"
                    />

            <Spinner
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="@style/spinnerstyle"
                    android:id="@+id/cutoffsignalstrength_spinner"
                    android:layout_weight="1"
                    />
        </LinearLayout>
    </LinearLayout>

    <include layout="@layout/contact_item_header"/>

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/listview"
            android:scrollbars="none"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

</LinearLayout>
